Fixed overflow scrolling issue with code sample div's.

--- a/styles.css
+++ b/styles.css
@@ -130,8 +130,8 @@ button:hover {
 .codeSpacer {
     display: grid;
     position: relative;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
+    grid-template-columns: 1fr, 1fr;
+    grid-template-rows: 1fr, 1fr;
     grid-template-areas: 
         "cont item"
         "cont try";
@@ -149,9 +149,8 @@ button:hover {
     width: 100%;
     height: 100%;
     margin: auto;
-    overflow: hidden;
     text-align: left;
-    overflow: auto;
+    overflow-y: hidden;
 }
 .codeType {
     display: block;
@@ -176,7 +175,6 @@ code {
     padding: 12px;
     color: #f7f7f7;
     background-color: #242424;
-    overflow: auto;
 }
     code, pre {
         font-family: 'Roboto', sans-serif;
@@ -303,5 +301,10 @@ code {
         "cont"
         "item"
         "try";
+    }
+    .exampleCode-Container, .codeType, code, pre {
+        width: 100%;
+        height: auto;
+        overflow: auto;
     }
 }
